@@ -1,14 +1,5 @@
 # TODO
 
-- BUG: SPINNER: The utf-8 crumb-separator causes 100% CPU! WTF!?!
-
-   src/procenv --format=crumb --crumb-separator "→"
-
-- allow build on lucid
-	- no dh-autoreconf
-	- no aa_is_enabled().
-	- no aa_gettaskcon().
-
 - "--path" ? which shows:
 
 	path:
