@@ -1,3 +1,13 @@
+2015-08-21  James Hunt  <james.hunt@ubuntu.com>
+
+	* src/procenv.c: save_locale(): Specify 2nd arg to setlocale()
+	  as "" since the original NULL was not only incorrect, it caused
+	  a UTF-8 '--separator' or '--crumb-separator' to cause a crash.
+	* src/tests/check_all_args.in:
+	  - New tests for UTF-8 '--separator' and '--crumb-separator'.
+	  - Show language test being run with.
+	  - Ensure full command-line shown on failure.
+
 2015-07-11  James Hunt  <james.hunt@ubuntu.com>
 
 	* src/procenv.c: show_security_module_context_linux():
